--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,22 +1,22 @@
 :root {
-  --color-pink-primary: #eb2f64;
-  --color-pink-light: #ff3366;
-  --color-pink-dark: #ba265d;
+  --clr-pink-primary: #eb2f64;
+  --clr-pink-light: #ff3366;
+  --clr-pink-dark: #ba265d;
 
-  --color-orange-light: #ffb900;
-  --color-orange-dark: #ff7730;
+  --clr-orange-light: #ffb900;
+  --clr-orange-dark: #ff7730;
 
-  --color-gray-dark: #777;
-  --color-gray-dark-2: #999;
-  --color-gray-dark-3: #333;
+  --clr-gray-dark: #777;
+  --clr-gray-dark-2: #999;
+  --clr-gray-dark-3: #333;
 
-  --color-white: #fff;
-  --color-black: #000;
-  --color-gray: #aaa;
-  --color--blue: #1658a3;
-  --color-green: #28b485;
-  --color-purple: #8134af;
-  --color-purple-light: #a134e9;
+  --clr-white: #fff;
+  --clr-black: #000;
+  --clr-gray: #aaa;
+  --clr--blue: #1658a3;
+  --clr-green: #28b485;
+  --clr-purple: #8134af;
+  --clr-purple-light: #a134e9;
 
   // font variables
   --default-font-size: 1.6rem;
@@ -24,19 +24,19 @@
   // --font-display: 'Josefin Sans', sans-serif;
 }
 
-$color-gray-dark-2: #999;
-$color-gray-light: #e9e9e9;
-$color-black: #000;
-$color-black-light: #000;
-$color-black-dark: #333;
-$color-orange: #ffb900;
-$color-facebook: #3b5998;
-$color-twitter: #00acee;
-$color-instagram-1: #8134af;
-$color-instagram-2: #dd2a7b;
-$color-instagram-3: #feda77;
-$color-puple-light-1: #e0b9e3;
-$color-puple-light-2: #e4b2e6;
+$clr-gray-dark-2: #999;
+$clr-gray-light: #e9e9e9;
+$clr-black: #000;
+$clr-black-light: #000;
+$clr-black-dark: #333;
+$clr-orange: #ffb900;
+$clr-facebook: #3b5998;
+$clr-twitter: #00acee;
+$clr-instagram-1: #8134af;
+$clr-instagram-2: #dd2a7b;
+$clr-instagram-3: #feda77;
+$clr-puple-light-1: #e0b9e3;
+$clr-puple-light-2: #e4b2e6;
 
 $bp-largest-x1: 81.25em; //1300px
 $bp-largest: 75em; //1200px
@@ -55,8 +55,8 @@ $bp-smallest: 25em; //400px
 }
 
 ::selection {
-  background-color: var(--color-pink-light);
-  color: var(--color-white);
+  background-color: var(--clr-pink-light);
+  color: var(--clr-white);
 }
 
 html {
@@ -68,5 +68,5 @@ html {
 body {
   font-weight: 300;
   line-height: 1.6;
-  color: var(--color-gray-dark);
+  color: var(--clr-gray-dark);
 }
