fix: add styling

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -69,6 +69,7 @@ html {
 
 body {
   font-weight: 300;
+  font-size: 1.6rem;
   line-height: 1.6;
   color: var(--clr-gray-dark);
   cursor: default;
