--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -16,6 +16,7 @@
   --clr--blue: #1658a3;
   --clr-green: #28b485;
   --clr-purple-dark: #240238;
+  --clr-purple-dark-2: #570686;
   --clr-purple-light-1: #8134af;
   --clr-purple-light-2: #a134e9;
   --clr-purple-light-3: #cf8df5;
