fix: change css variable name

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,7 +15,7 @@
   --clr-gray: #aaa;
   --clr--blue: #1658a3;
   --clr-green: #28b485;
-  --clr-purple-dark: #240238;
+  --clr-purple-dark-1: #240238;
   --clr-purple-dark-2: #570686;
   --clr-purple-light-1: #8134af;
   --clr-purple-light-2: #a134e9;
