fix: add styling

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -73,6 +73,7 @@ body {
   font-size: var(--default-font-size);
   line-height: 1.6;
   color: var(--clr-gray-dark);
+  scroll-behavior: smooth;
   cursor: default;
 }
 
