--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -77,6 +77,16 @@ body {
   cursor: default;
 }
 
+.heading-left {
+  grid-column: 1 / span 4;
+  justify-self: center;
+}
+
+.heading-right {
+  grid-column: 5 / span 4;
+  justify-self: center;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
