--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -89,6 +89,10 @@ body {
   grid-area: 3 / 2 / span 5 / span 5;
 }
 
+.img-2 {
+  grid-area: 5 / 3 / span 5 / span 5;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
