fix: add css variables

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -21,6 +21,12 @@
   --clr-purple-light-2: #a134e9;
   --clr-purple-light-3: #cf8df5;
 
+  --clr-facebook: #3b5998;
+  --clr-twitter: #00acee;
+  --clr-instagram-1: #8134af;
+  --clr-instagram-2: #dd2a7b;
+  --clr-instagram-3: #feda77;
+
   // font variables
   --default-font-size: 1.6rem;
   // --font-primary: 'Nunito', sans-serif;
