fix: declare a css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -15,6 +15,7 @@
   --clr-gray: #aaa;
   --clr--blue: #1658a3;
   --clr-green: #28b485;
+  --clr-red: rgba(244, 63, 94, 1);
   --clr-purple-dark-1: #240238;
   --clr-purple-dark-2: #570686;
   --clr-purple-light-1: #8134af;
