--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,7 +13,9 @@
   --clr-white: #fff;
   --clr-black: #000;
   --clr-gray: #aaa;
-  --clr--blue: #1658a3;
+  --clr-gray-dark-2: #999;
+  --clr-gray-light: #e9e9e9;
+  --clr-blue: #1658a3;
   --clr-green: #28b485;
   --clr-red: rgba(244, 63, 94, 1);
   --clr-purple-dark-1: #240238;
