fix: add media query

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -59,6 +59,10 @@ html {
   font-size: 62.5%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 50%;
+  }
 }
 
 body {
