--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -61,7 +61,15 @@ html {
   box-sizing: border-box;
 
   @media only screen and (max-width: $bp-largest) {
+    font-size: 56.25%;
+  }
+
+  @media only screen and (max-width: $bp-large) {
     font-size: 50%;
+  }
+
+  @media only screen and (min-width: 112.5em) {
+    font-size: 75%;
   }
 }
 
