--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -110,6 +110,11 @@ body {
 
 .img-3 {
   grid-area: 2 / 5 / span 5 / span 5;
+
+  @media only screen and (max-width: 56.25em) {
+    grid-area: 2 / 10 / span 6 / span 5;
+    transform: scale(1.3);
+  }
 }
 
 @keyframes moveInRight {
