fix: add css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -20,6 +20,8 @@
   --clr-purple-light-2: #a134e9;
   --clr-purple-light-3: #cf8df5;
 
+  --clr-outline-dark: #1c2127;
+
   --clr-facebook: #3b5998;
   --clr-twitter: #00acee;
   --clr-instagram-1: #8134af;
