fix: add css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -21,6 +21,7 @@
   --clr-purple-light-3: #cf8df5;
 
   --clr-bg-dark-primary: #141a1f;
+  --clr-bg-dark-secondary: #101418;
   --clr-outline-light: var(--clr-purple-light-3);
   --clr-outline-dark: #1c2127;
 
