fix: add css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -22,6 +22,7 @@
 
   --clr-bg-dark-primary: #141a1f;
   --clr-bg-dark-secondary: #101418;
+  --clr-bg-dark-tertiary: #1c2127;
   --clr-outline-light: var(--clr-purple-light-3);
   --clr-outline-dark: #1c2127;
 
