fix: add css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -27,6 +27,7 @@
   --clr-light-2: #e3e5e7;
   --clr-outline-light: var(--clr-purple-light-3);
   --clr-outline-dark: #1c2127;
+  --clr-caret-light: var(--clr-purple-light-3);
 
   --clr-facebook: #3b5998;
   --clr-twitter: #00acee;
