fix: add css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -28,6 +28,7 @@
   --clr-outline-light: var(--clr-purple-light-3);
   --clr-outline-dark: #1c2127;
   --clr-caret-light: var(--clr-purple-light-3);
+  --clr-caret-dark: var(--clr-light-1);
 
   --clr-facebook: #3b5998;
   --clr-twitter: #00acee;
