--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -23,6 +23,8 @@
   --clr-bg-dark-primary: #141a1f;
   --clr-bg-dark-secondary: #101418;
   --clr-bg-dark-tertiary: #1c2127;
+  --clr-text-small-light: rgba(115, 115, 115, 1);
+  --clr-text-small-dark: #c0c7d1;
   --clr-light-1: #b0b8c4;
   --clr-light-2: #e3e5e7;
   --clr-outline-light: var(--clr-purple-light-3);
