--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,6 +10,7 @@
   --clr-black: #000;
   --clr-gray: #aaa;
   --clr-gray-dark-2: #999;
+  --clr-gray-light-1: #f9f9f9;
   --clr-gray-light-2: #e9e9e9;
   --clr-blue: #1658a3;
   --clr-green: #28b485;
