--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -130,6 +130,10 @@ body {
   grid-area: 1 / 1 / span 2 / span 2;
 }
 
+.gallery-item--2 {
+  grid-area: 1 / 3 / span 3 / span 3;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
