--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -134,6 +134,10 @@ body {
   grid-area: 1 / 3 / span 3 / span 3;
 }
 
+.gallery-item--3 {
+  grid-area: 1 / 6 / span 2 / 7;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
