--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -142,6 +142,10 @@ body {
   grid-area: 1 / 7 / span 2 / -1;
 }
 
+.gallery-item--5 {
+  grid-area: 3 / 1 / span 3 / span 2;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
