--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -150,6 +150,10 @@ body {
   grid-area: 4 / 3 / span 2 / span 2;
 }
 
+.gallery-item--7 {
+  grid-area: 4 / 5 / 5 / 6;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
