--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -170,6 +170,10 @@ body {
   grid-area: 6 / 2 / span 2 / span 2;
 }
 
+.gallery-item--12 {
+  grid-area: 6 / 4 / span 2 / 5;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
