--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -174,6 +174,10 @@ body {
   grid-area: 6 / 4 / span 2 / 5;
 }
 
+.gallery-item--13 {
+  grid-area: 5 / 5 / -1 / span 3;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
