--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -178,6 +178,10 @@ body {
   grid-area: 5 / 5 / -1 / span 3;
 }
 
+.gallery-item--14 {
+  grid-area: 6 / 8 / -1 / -1;
+}
+
 @keyframes moveInRight {
   0% {
     opacity: 0;
