fix: add css styling

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -94,6 +94,15 @@ body {
   cursor: default;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-display);
+}
+
 .heading-left {
   grid-column: 1 / span 4;
 }
