fix: add css variable

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -20,6 +20,7 @@
   --clr-purple-light-1: #8134af;
   --clr-purple-light-2: #a134e9;
   --clr-purple-light-3: #cf8df5;
+  --clr-purple-light-4: #fdf4ff;
 
   --clr-bg-dark-primary: #141a1f;
   --clr-bg-dark-secondary: #101418;
