--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -8,6 +8,7 @@
   --clr-gray-dark-3: #333;
   --clr-gray-light-1: #f9f9f9;
   --clr-gray-light-2: #e9e9e9;
+  --clr-gray-light-3: #ddd;
 
   --clr-white: #fff;
   --clr-black: #000;
