--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -72,6 +72,7 @@ html {
   font-size: 62.5%;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-x: hidden;
 
   @media only screen and (max-width: $bp-largest) {
     font-size: 56.25%;
@@ -93,6 +94,7 @@ body {
   line-height: 1.6;
   color: var(--clr-gray-dark);
   scroll-behavior: smooth;
+  overflow-x: clip;
   cursor: default;
 }
 
